--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "alchemy-sdk": "^2.7.0",
     "aws-sdk": "^2.1398.0",
+    "convert-svg-to-png": "^0.6.4",
     "dotenv": "^16.0.3",
     "image-size": "^1.0.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
+    "sharp": "^0.32.5",
     "stopword": "^2.0.8",
     "unique-names-generator": "^4.7.1"
   }
