--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.624.0",
     "alchemy-sdk": "^2.7.0",
     "aws-sdk": "^2.1398.0",
     "convert-svg-to-png": "^0.6.4",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "image-size": "^1.0.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
